@@ -1,33 +1,10 @@
-# $NetBSD: Makefile,v 1.11 2003/07/17 21:49:55 grant Exp $
+# $NetBSD: Makefile,v 1.12 2004/10/29 12:56:24 abs Exp $
 #
 
-.include "../../mk/bsd.prefs.mk"
-#
-.if ${OPSYS} == "SunOS" && ${MACHINE_ARCH} == "sparc"
-DISTNAME=	${PKGNAME_NOREV}.sparc-sun-solaris2.6
-#
-.elif (${MACHINE_ARCH} == "alpha")
-DISTNAME=	${PKGNAME_NOREV}.alpha-unknown-netbsd1.4
-#
-.elif (${MACHINE_ARCH} == "i386")
-DISTNAME=	${PKGNAME_NOREV}.i386-unknown-netbsd1.3
-#
-.elif (${MACHINE_ARCH} == "powerpc")
-DISTNAME=	${PKGNAME_NOREV}.powerpc-unknown-netbsd1.4
-#
-# XXX Not yet on ftp site
-.elif (${MACHINE_ARCH} == "sparc")
-DISTNAME=	${PKGNAME_NOREV}.sparc-unknown-netbsd1.4
-#
-.else
-DISTNAME=	${PKGNAME_NOREV}
-.endif
-#
-PKGNAME=	setiathome-3.03
-PKGREVISION=	2
+DISTNAME=       ${PKGNAME_NOREV}
+PKGNAME=	setiathome-3.08
 CATEGORIES=	misc
-MASTER_SITES=	ftp://ftp.cdrom.com/pub/setiathome/ \
-		ftp://alien.ssl.berkeley.edu/pub/ \
+MASTER_SITES=	ftp://alien.ssl.berkeley.edu/pub/ \
 		ftp://setidata.ssl.berkeley.edu/pub/
 EXTRACT_SUFX=	.tar
 
@@ -35,7 +12,45 @@ MAINTAINER=	abs@NetBSD.org
 HOMEPAGE=	http://setiathome.ssl.berkeley.edu/
 COMMENT=	Search for Extraterrestrial Intelligence - at home
 
-ONLY_FOR_PLATFORM= NetBSD-*-alpha NetBSD-*-i386 NetBSD-*-powerpc SunOS-*-sparc
+.include "../../mk/bsd.prefs.mk"
+
+# Now rework distname based on OPSYS and MACHINE_ARCH. Does not handle
+# rejecting older versions of operating systems
+#
+.if ${OPSYS} == "NetBSD"
+#
+DISTNAME=       ${PKGNAME_NOREV}.${MACHINE_ARCH}-unknown-netbsd1.6.1
+
+.elif ${OPSYS} == "FreeBSD"
+#
+DISTNAME=	${PKGNAME_NOREV}.${MACHINE_ARCH}-unknown-freebsd4.0
+
+.elif ${OPSYS} == "OpenBSD"
+#
+DISTNAME=       ${PKGNAME_NOREV}.${MACHINE_ARCH}-unknown-openbsd3.3
+
+.elif ${OPSYS} == "SunOS"
+#
+.if ${MACHINE_ARCH} == "sparc"
+DISTNAME=	${PKGNAME_NOREV}.sparc-sun-solaris2.6
+else
+DISTNAME=	${PKGNAME_NOREV}.i386-pc-solaris2.6
+.endif
+
+.elif ${OPSYS} == "Linux"
+#
+.if ${MACHINE_ARCH} == "i386"
+DISTNAME=	${PKGNAME_NOREV}.i686-pc-linux-gnu
+.elif ${MACHINE_ARCH} == "x86_64"
+DISTNAME=	${PKGNAME_NOREV}.x86_64-pc-linux-gnu
+.endif
+
+.endif
+
+ONLY_FOR_PLATFORM=  NetBSD-*-sparc FreeBSD-*-i386 OpenBSD-*-alpha
+ONLY_FOR_PLATFORM+= OpenBSD-*-i386 OpenBSD-*-macppc OpenBSD-*-sparc
+ONLY_FOR_PLATFORM+= OpenBSD-*-sparc64 SunOS-*-sparc SunOS-*-i386 Linux-*-i386
+ONLY_FOR_PLATFORM+= Linux-*-i386 Linux-*-x86_64
 
 DIST_SUBDIR=    setiathome
 DECOMPRESS_CMD=	${CAT}
@@ -48,5 +63,6 @@ do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/setiathome ${PREFIX}/bin
 	${INSTALL_PROGRAM} ${WRKSRC}/xsetiathome ${PREFIX}/bin
 	${INSTALL_MAN} ${WRKSRC}/README ${PREFIX}/man/cat1/setiathome.0
+	${INSTALL_MAN} ${WRKSRC}/README.xsetiathome ${PREFIX}/man/cat1/xsetiathome.0
 
 .include "../../mk/bsd.pkg.mk"
